Update package.json for Inventory System details

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "com.radioactivegoat.<REPLACE_NAME_LOWER>",
+  "name": "com.radioactivegoat.inventorysystem",
   "version": "0.0.1",
-  "displayName": "RG.<REPLACE_NAME>",
-  "description": "<REPLACE_DESC>",
+  "displayName": "RG.InventorySystem",
+  "description": "Inventory system for Unity.",
   "unity": "6000.0",
-  "documentationUrl": "https://github.com/Radioactive-Goat/RG.<REPLACE_NAME>/wiki",
-  "licensesUrl": "https://raw.githubusercontent.com/Radioactive-Goat/RG.<REPLACE_NAME>/master/LICENSE",
+  "documentationUrl": "https://github.com/Radioactive-Goat/RG.InventorySystem/wiki",
+  "licensesUrl": "https://raw.githubusercontent.com/Radioactive-Goat/RG.InventorySystem/master/LICENSE",
   "keywords": [
+    "Inventory"
   ],
   "author": {
     "name": "Radioactive Goat",
